# kappachat

./: .gitignore  Cargo.toml  rustfmt.toml
src/: action.rs  app.rs  channel.rs  chat_layout.rs  command.rs  config.rs  ext.rs  fetch.rs  font_icon.rs  helix.rs  image_cache.rs  interaction.rs  kappas.rs  key_mapping.rs  lib.rs  line.rs  logger.rs  main.rs  queue.rs  state.rs  store.rs  tabs.rs  task_queue.rs  twitch.rs  user_list_updater.rs
src/widgets/: channel_settings.rs  channels.rs  chatters.rs  display_settings.rs  edit_box.rs  help.rs  key_bindings.rs  keybind_settings.rs  line.rs  log_window.rs  main.rs  mod.rs  settings.rs  start.rs  start_screen.rs  tab.rs  tabs.rs  tabs_widget.rs  twitch_autojoin.rs  twitch_settings.rs
src/widgets/main/: chat_line.rs  chat_view.rs  edit_box.rs  mod.rs  position.rs  state.rs  tab_bar.rs  tab_view.rs  timestamp.rs  user_list.rs
src/widgets/settings/: channel.rs  display.rs  keybind.rs  mod.rs  twitch.rs
src/widgets/start/: inlay.rs  mod.rs  rotation.rs  state.rs
