[package]
name    = "egui-test"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
anyhow           = "1.0.64"
eframe           = { version = "0.19.0", features = ["dark-light", "persistence"] }
egui             = "0.19.0"
egui_extras      = { version = "0.19.0", features = ["image"] }
fastrand         = "1.8.0"
flume            = { version = "0.10.14", default-features = false }
heck             = "0.4.0"
image            = { version = "0.24.3", default-features = false, features = ["png"] }
once_cell        = "1.14.0"
regex            = "1.6.0"
serde            = { version = "1.0.144", features = ["derive"] }
serde_json       = "1.0.85"
serde_yaml       = "0.9.11"
simple_env_load  = "0.2.0"
time             = { version = "0.3.14", features = ["parsing", "formatting", "macros", "local-offset", "serde", "serde-well-known"] }
ureq             = { version = "2.5.0", features = ["json"] }
uuid             = { version = "1.1.2", features = ["v4", "serde"] }

[patch.crates-io]
# egui = { path = "c:/dev/forks/egui/crates/egui" }
