[package]
name        = "kappachat"
version     = "0.1.0"
edition     = "2021"
license     = "0BSD"
description = "chat with kappas near you"

default-run = "kappachat"

[dependencies]
anyhow           = "1.0.65"
eframe           = { version = "0.19.0", features = ["dark-light", "persistence"] }
egui             = "0.19.0"
egui_extras      = { version = "0.19.0", features = ["image"] }
fastrand         = "1.8.0"
flume            = { version = "0.10.14", default-features = false, features = ["select"] }
heck             = "0.4.0"
image            = { version = "0.24.3", default-features = false, features = ["png", "gif", "jpeg"] }
poll-promise     = "0.1.0"
serde            = { version = "1.0.144", features = ["derive"] }
serde_json       = "1.0.85"
serde_yaml       = "0.9.13"
simple_env_load  = "0.2.0"
time             = { version = "0.3.14", features = ["parsing", "formatting", "macros", "local-offset", "serde", "serde-well-known"] }
ureq             = { version = "2.5.0", features = ["json"] }
uuid             = { version = "1.1.2", features = ["v4", "serde"] }
once_cell        = "1.14.0"
regex            = "1.6.0"
rusqlite         = { version = "0.28.0", features = ["bundled", "uuid"] }


[features]
default = []
save_http_json = []

[profile.dev.package.eframe]
opt-level = 3

[profile.dev.package.epaint]
opt-level = 3

[profile.dev.package.egui]
opt-level = 3

[profile.dev.package.egui_extras]
opt-level = 3

[profile.dev.package.egui-winit]
opt-level = 3

[profile.dev.package.egui_glow]
opt-level = 3

[profile.dev.package.image]
opt-level = 3
